# TOS-Searcher

./: .gitignore  CLAUDE.md  pyproject.toml
src/tos_searcher/: __main__.py  app.py  config.py
src/tos_searcher/analyzer/: detector.py  patterns.py  scorer.py
src/tos_searcher/gui/: main_window.py  results_frame.py  search_frame.py
src/tos_searcher/scraper/: fetcher.py  parser.py
src/tos_searcher/search/: __init__.py  bing.py  crawler.py  duckduckgo.py  engine.py  google.py  pipeline.py
src/tos_searcher/storage/: database.py  models.py
tests/: conftest.py  test_database.py  test_detector.py  test_fetcher.py  test_parser.py  test_patterns.py
