[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tos-searcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.0",
    "ddgs>=9.0",
    "search-engines>=1.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "spacy>=3.7",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
tos-searcher = "tos_searcher.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
